# stratum

./: .gitignore  .gitmodules  Cargo.toml  DESIGN.md  HACKING.md  README.md  justfile
src/: cli.rs  main.rs  state.rs  store.rs  util.rs
src/cli/: mod.rs  patchset.rs  worktree.rs
src/commit/: commit_ref.rs  mod.rs
src/composefs/: erofs.rs  erofs_old.rs  fsverity.rs  mod.rs
src/mount/: composefs.rs  mod.rs
src/object/: mod.rs
src/patchset/: mod.rs
src/store/: chunks.rs  mod.rs  tests.rs
test/erofs/: commit.cfs  test2.cfs
