[package]
name = "stratum"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive", "env"] }
composefs = "0.3.0"
hex = "0.4.3"
nix = { version = "0.30.1", features = ["mount"] }
rs_merkle = "1.4.2"
rustix = { version = "1.0.7", features = ["mount"] }
serde = { version = "1.0.219", features = ["derive"] }

sha2 = "0.10.9"
sled = "0.34.7"
tempfile = "3.8"
toml = "0.8.23"
tracing = "~0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ulid = { version = "1.2.1", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
