[package]
name = "stratum"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive", "env"] }
composefs = "0.3.0"
file-lock = "2.1.11"
hex = "0.4.3"
jwalk = "0.8.1"
libc = "0.2"
mnt = "0.3.1"
mountpoints = "0.2.1"
nix = { version = "0.30.1", features = ["mount"] }
rs_merkle = "1.4.2"
rustix = { version = "1.0.7", features = ["mount"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
sled = "0.34.7"
tempfile = "3.8"
toml = "0.8.23"
tracing = "~0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ulid = { version = "1.2.1", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"

[lints.clippy]
# cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

disallowed-macros = "deny"
excessive-nesting = "warn"

# arithmetic_side_effects = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
field_scoped_visibility_modifiers = "deny"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
# indexing_slicing = "warn"
infinite_loop = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "warn"
# multiple_inherent_impl = "warn"
needless_raw_strings = "warn"
rc_buffer = "warn"
rc_mutex = "deny"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "deny"
unimplemented = "warn"
unneeded_field_pattern = "warn"
unwrap_in_result = "warn"
